검색바 누르면 나오는 여행객 목록 화면 추가

--- a/TripWithMe/AndroidManifest.xml
+++ b/TripWithMe/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".ProfileActivity"
             android:label="@string/title_activity_profile" >
         </activity>
+        <activity
+            android:name=".TravelerListActivity"
+            android:label="@string/title_activity_TravelerList" >
+        </activity>
     </application>
 
 </manifest>
