--- a/TripWithMe/AndroidManifest.xml
+++ b/TripWithMe/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:name=".TravelerListActivity"
             android:label="@string/title_activity_TravelerList" >
         </activity>
+        <activity
+            android:name=".TravelerDetails"
+            android:label="@string/title_activity_traveler_details" >
+        </activity>
     </application>
 
 </manifest>
