--- a/TripWithMe/AndroidManifest.xml
+++ b/TripWithMe/AndroidManifest.xml
@@ -38,9 +38,13 @@
             android:name=".ChatActivity"
             android:label="@string/title_activity_Chat" >
         </activity>
-        <activity    
+        <activity
             android:name=".TravelerDetails"
             android:label="@string/title_activity_traveler_details" >
+        </activity>
+        <activity
+            android:name=".MarketActivity"
+            android:label="@string/title_activity_market" >
         </activity>
     </application>
 
