실시간 채팅 액티비티 추가

--- a/TripWithMe/AndroidManifest.xml
+++ b/TripWithMe/AndroidManifest.xml
@@ -46,6 +46,14 @@
             android:name=".MarketActivity"
             android:label="@string/title_activity_market" >
         </activity>
+        <activity
+            android:name=".RealTimeChatListActivity"
+            android:label="@string/title_activity_real_time_char_list" >
+        </activity>
+        <activity
+            android:name=".RealTimeChatActivity"
+            android:label="@string/title_activity_real_time_chat" >
+        </activity>
     </application>
 
 </manifest>
