1.채팅 ui 수정 2.프로필 박의로운으로 바꿈 3.대화상대 제시카알바로 바꿈
ps.네비게이션바 프로필 사진 수정 필요

--- a/TripWithMe/AndroidManifest.xml
+++ b/TripWithMe/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:label="@string/title_activity_profile" >
         </activity>
         <activity
+            android:name=".MyProfileActivity"
+            android:label="@string/title_activity_my_profile" >
+        </activity>
+        <activity
             android:name=".TravelerListActivity"
             android:label="@string/title_activity_TravelerList" >
         </activity>
